--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ markdown: kramdown
 theme: jekyll-theme-architect
 plugins:
   - jekyll-feed
+repository: "dmitrykarpenko/dmitrykarpenko.github.io"
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
