--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-architect
-plugins:
-  - jekyll-menus
+# plugins:
+#   - jekyll-menus
 repository: dmitrykarpenko/dmitrykarpenko.github.io
 github: [metadata]
 
