--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,10 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-architect
-# plugins:
-#   - jekyll-menus
+plugins:
+  - jekyll-paginate
+paginate: 3
+paginate_path: "/blog/page:num/"
 repository: dmitrykarpenko/dmitrykarpenko.github.io
 github: [metadata]
 
