--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ theme: jekyll-theme-architect
 plugins:
   - jekyll-paginate
 paginate: 3
-paginate_path: "/blog/page:num/"
+paginate_path: "/:num/"
 repository: dmitrykarpenko/dmitrykarpenko.github.io
 github: [metadata]
 
