--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: The Blog
-email: your-email@example.com
+email: dmitrykarpenko@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Observations and ideas on software development, architecture, and algorithms.
 baseurl: "" # the subpath of your site, e.g. /blog
