--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+# This settings are also used for SEO.
 title: The Blog
 email: dmitrykarpenko@gmail.com
+author: Dmitry Karpenko
 description: >- # this means to ignore newlines until "baseurl:"
   Observations and ideas on software development, architecture, and algorithms.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+# github_username:  jekyll
 
 # Build settings
 markdown: kramdown
